--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -3,7 +3,7 @@ name: Update winget packages
 on:
   workflow_dispatch:
   schedule:
-    - cron:  '0 3 * * *'  # Scheduled to run daily at 03:00
+    - cron:  '0 3 * * *' # Scheduled to run daily at 03:00
 
 env:
   KOMAC_VERSION: 1.11.0
@@ -15,7 +15,16 @@ jobs:
 
     strategy:
       matrix:
-        id: ["Typst.Typst", "Casey.Just", "michidk.vscli"]
+        include:
+          - id: "Typst.Typst"
+            repo: "typst/typst"
+            url: "https://github.com/typst/typst/releases/download/v{VERSION}/typst-x86_64-pc-windows-msvc.zip"
+          - id: "Casey.Just"
+            repo: "casey/just"
+            url: "https://github.com/casey/just/releases/download/{VERSION}/just-{VERSION}-x86_64-pc-windows-msvc.zip"
+          - id: "michidk.vscli"
+            repo: "michidk/vscli"
+            url: "https://github.com/michidk/vscli/releases/download/v{VERSION}/vscli-x86_64-pc-windows-msvc.zip"
 
     steps:
     - name: Setup Java
@@ -27,8 +36,22 @@ jobs:
     - name: Install Komac
       run: wget https://github.com/russellbanks/Komac/releases/download/v${{ env.KOMAC_VERSION }}/Komac-${{ env.KOMAC_VERSION }}-all.jar -O komac.jar
 
+    - name: Detect Latest Release
+      uses: actions/github-script@v5
+      id: latest_release
+      with:
+        script: |
+          const [owner, repo] = '${{ matrix.config.repo }}'.split('/');
+          const { data } = await github.repos.getLatestRelease({ owner, repo });
+          const tagName = data.tag_name.startsWith('v') ? data.tag_name.substring(1) : data.tag_name;
+          return tagName;
+
     - name: Update package
-      run: java -jar komac.jar update --id=${{ matrix.id }} --submit --token=${{ secrets.KOMAC_TOKEN }} || true
+      run: |
+        VERSION=${{ steps.latest_release.outputs.result }}
+        URL=${{ matrix.url }}
+        FINAL_URL=$(echo $URL | sed "s/\{VERSION}/$VERSION/g")
+        java -jar komac.jar update --id=${{ matrix.id }} --version $VERSION --url $FINAL_URL --submit --token=${{ secrets.KOMAC_TOKEN }} || true
 
   cleanup:
     name: Cleanup branches
