--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -28,7 +28,7 @@ jobs:
 
     steps:
     - name: Update Packages
-      uses: michidk/winget-updater@v1
+      uses: michidk/winget-updater@latest
       with:
         komac-token: ${{ secrets.KOMAC_TOKEN }}
         package-id: ${{ matrix.id }}
@@ -42,6 +42,6 @@ jobs:
 
     steps:
     - name: Run Komac
-      uses: michidk/run-komac@v1
+      uses: michidk/run-komac@latest
       with:
         args: 'branch cleanup --token=${{ secrets.KOMAC_TOKEN }}'
