--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -44,4 +44,4 @@ jobs:
     - name: Run Komac
       uses: michidk/run-komac@latest
       with:
-        args: 'branch cleanup --token=${{ secrets.KOMAC_TOKEN }}'
+        args: 'cleanup --token=${{ secrets.KOMAC_TOKEN }}'
