feat: Add glazewm & zebar

--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -22,6 +22,12 @@ jobs:
           - id: "michidk.vscli"
             repo: "michidk/vscli"
             url: "https://github.com/michidk/vscli/releases/download/v{VERSION}/vscli-x86_64-pc-windows-msvc.zip"
+          - id: "glzr-io.zebar"
+            repo: "glzr-io/zebar"
+            url: "https://github.com/glzr-io/zebar/releases/download/v{VERSION}/zebar-v{VERSION}-opt1-x64.msi"
+          - id: "glzr-io.glazewm"
+            repo: "glzr-io/glazewm"
+            url: "https://github.com/glzr-io/glazewm/releases/download/v{VERSION}/glazewm-{VERSION}.exe"
 
     steps:
     - name: Update Packages
